--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <script src="https://kit.fontawesome.com/7109a902b4.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <title>Animation CSS</title>
 </head>
+
 <body>
-    <div>Coucou les pioupiou's</div>
+    <div class="box">
+        <img src="/assets/img/girl.png" alt="Indian girl smiling">
+        <div class="circle"></div>
+        <div class="date">15<br>Aug</div>
+        <section>
+            <div class="tab">Photos</div>
+            <h1>India</h1>
+            <h3>An upcoming superpower</h3>
+            <article>
+                <p>India is a vast South Asian country with diverse terrain - from Himalayan peeks to Indian Ocean
+                coastline - and history reaching back 5 millenia.</p>
+            </article>
+            <div class="bottom">
+                <p><i class="far fa-clock"></i>6 mins ago</p>
+                <p><i class="fas fa-comments"></i>39 comments</p>
+            </div>
+        </section>
+    </div>
 </body>
+
 </html>
