Première version focntionnelle

--- a/index.html
+++ b/index.html
@@ -6,26 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/7109a902b4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/assets/css/style.css">
-    <title>Animation CSS</title>
+    <title>Carte animée en CSS</title>
 </head>
 
 <body>
     <div class="box">
-        <img src="/assets/img/girl.png" alt="Indian girl smiling">
-        <div class="circle"></div>
-        <div class="date">15<br>Aug</div>
-        <section>
+        <section class="top">
+            <img src="/assets/img/girl.png" alt="">
+            <div class="date">15<br>Aug</div>
+        </section>
+        <section class="bottom">
             <div class="tab">Photos</div>
             <h1>India</h1>
             <h3>An upcoming superpower</h3>
             <article>
                 <p>India is a vast South Asian country with diverse terrain - from Himalayan peeks to Indian Ocean
-                coastline - and history reaching back 5 millenia.</p>
+                    coastline - and history reaching back 5 millenia.</p>
             </article>
-            <div class="bottom">
-                <p><i class="far fa-clock"></i>6 mins ago</p>
-                <p><i class="fas fa-comments"></i>39 comments</p>
-            </div>
+
+        </section>
+        <section class="icons">
+            <p><i class="far fa-clock"></i>6 mins ago</p>
+            <p><i class="fas fa-comments"></i>39 comments</p>
         </section>
     </div>
 </body>
