Correction des liens dans le fichier HTML

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/7109a902b4.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Carte animée en CSS</title>
 </head>
 
 <body>
     <div class="box">
         <section class="top">
-            <img src="/assets/img/girl.png" alt="">
+            <img src="assets/img/girl.png" alt="">
             <div class="date">15<br>Aug</div>
         </section>
         <section class="bottom">
